assets/style.css
/* libre baskerville is licensed under SIL Open Font License, see
 * full text at res/fonts/baskerville/LICENSE.txt */
@font-face {
    font-family: baskerville;
    src:
        url("fonts/baskerville/LibreBaskerville-Regular.ttf") format("truetype"),
        local("serif");
    font-weight: normal;
    font-style: normal;
}
/* libre baskerville is licensed under SIL Open Font License, see
 * full text at res/fonts/baskerville/LICENSE.txt */
@font-face {
    font-family: baskerville;
    src:
        url("fonts/baskerville/LibreBaskerville-Bold.ttf") format("truetype"),
        local("serif");
    font-weight: bold;
    font-style: normal;
}
/* libre baskerville is licensed under SIL Open Font License, see
 * full text at res/fonts/baskerville/LICENSE.txt */
/* @font-face { */
/*     font-family: baskerville; */
/*     src: */
/*         url("fonts/baskerville/LibreBaskerville-Italic.ttf") format("truetype"), */
/*         local("serif"); */
/*     font-weight: normal; */
/*     font-style: italic; */
/* } */

/* liberation sans is licensed under SIL Open Font License, see
 * full text at res/fonts/liberation/LICENSE.txt */
@font-face {
    font-family: liberation-bold;
    src:
        url("fonts/liberation/LiberationSans-Bold.ttf") format("truetype"),
        local("sans-serif");
}

/* victor mono is licensed under SIL Open Font License, see
 * full text at res/fonts/victor/LICENSE.txt */
@font-face {
    font-family: victor-mono;
    src:
        url("fonts/victor/VictorMono-Light.ttf") format("truetype"),
        local("mono");
}

html, body {
    margin: 0;
    padding: 0;

    height: 100%;
    width: 100;
}

body {
    background-color: #221811;
    /* background-color: #191007; */
    /* color: white; */
    color: #DCA;
    font-family: baskerville;
    
    display: flex;
    flex-direction: column;
}

h2, h4, h5, h6 {
    font-family: liberation-bold;
    letter-spacing: -0.022em;
    color: #FFDDAA;
}

h3 {
    font-family: liberation-bold;
    letter-spacing: -0.022em;
    /* color: #DB6913; */
    color: #AA6633;
    margin-top: 40px;
    margin-bottom: 5px;
}
 
h2 {
    /* margin-top: 22px; */
    margin-top: 60px;
    margin-bottom: 18px;
}

h1 {
    margin-top: 62px;
    margin-bottom: 25px;
    font-family: baskerville; 
    /* color: #BBF3FF; */
    /* color: #FFDDAA; */
    color: #55AAAA;
}

code {
    font-family: victor-mono;
    /* color: #FFDDAA; */
    color: white;
}

a {
    /* color: #88DDFF; */
    /* color: #88DDDD; */
    color: #66BBBB;
}
a:hover {
    color: #BB9966;
}

.footnote-ref {
    text-decoration-line: line-through;
    color: #BB9966;
}
.footnote-ref:hover {
    /* color: #88DDFF; */
    color: #66BBBB;
}

hr {
    color: #BB9966;
    margin: 0;
    /* margin-left: 5px; */
    /* margin-right: 5px; */
}
.fancy-hr {
    /* background: linear-gradient(to right, #DB6913, #3388AA); */
    /* OLD CYAN WAS: #bbF3FF */
    /* background: linear-gradient(to right, #DB6913, #88DDFF); */
    background: linear-gradient(to right, #AA6633, #55AAAA);
    height: 1px;
    border: 0;
}

header {
    width: 100%;
    /* flex: 0 0 auto; */
    background-color: #191007;
}
header h1 {
    padding-left: 20px;
    margin-top: 21px;
    margin-bottom: 21px;
}
header a {
    text-decoration: none;
}

#container {
    flex: auto;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    margin-top: -30px;
    overflow-wrap: break-word;
}
#container strong {
    color: #BF9;
}
#container p {
    line-height: 1.8;
    margin-top: 30px;
}
main {
    padding: 10px;
    padding-top: 0px;
}

main img {
    max-width: 100%;
}

footer {
    /* flex-shrink: 0; */
    width: 100%;
    background-color: #191007;
}

pre {
    /* background-color: #101618; */
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 5px;
    padding-left: 20px;
    padding-right: 20px;
    /* border-left: 2px solid #88DDFF; */
    /* border-left: 4px solid #88DDDD; */
    border-left: 5px solid #5AA;
}

li {
    margin-bottom: 5px;
}

/* hide in page TOC when small screen */
@media (max-width: 768px) {
    #inpage-toc {
        display: none;
    }
    header h1 {
        padding-left: 10px;
    }
}
@media (min-width: 768px) {
    #menu-toc {
        display: none;
    }
    /* #nav-hamburger { */
    /*     display: none; */
    /* } */
    #nav-hamburger-icon {
        display: none;
    }
}
#nav-hamburger {
    display: none;
}
#nav-hamburger-icon {
    position: absolute;
    right: 12px;
    top: 25px;
}
#nav-hamburger-icon rect {
    fill: white;
}

#nav-hamburger:checked ~ aside {
    /* right: -2000px; */
    display: none;
}
#nav-hamburger:checked ~ #nav-hamburger-icon rect {
    fill: #BB9966;
}

#menu-toc {
    position: absolute;
    right: 0;
}
#menu-toc .TOC {
    margin-right: 0px;
    margin-top: 2px;
    margin-left: 10px;
}

.TOC h3 {
    font-family: baskerville;
    color: #FFDDAA;
    margin-top: 20px;
}
.TOC {
    float: right;
    padding: 10px;
    margin: 5px;
    /* background-color: #181207; */
    background-color: #191007;
    padding-top: 2px;
    padding-right: 20px;
    padding-left: 20px;
    min-width: 250px;
    /* margin-top: 25px; */
    margin-top: 50px;
    line-height: 1.8;
    margin-left: 20px;
}
.TOC a {
    font-size: 14px;
    font-family: baskerville;
    font-weight: 300;
    /* text-decoration: none; */
    color: #BB9966;
}
.TOC a:hover {
    /* color: #BBF3FF; */
    color: #66BBBB;
}
.TOC ul {
    list-style: Square;
    padding-left: 0px;
    list-style-position: inside;
    padding-inline-start: 0;
}
.TOC ul li {
    padding-left: 5px;
}
.TOC ul li ul li {
    padding-left: 20px;
}
.TOC ::marker {
    color: #BB9966;
}

.sideways-align {
    display: flex;
    flex-wrap: wrap;
}

.backlinks-list {
    /* margin-top: 5px; */
    margin-left: 5px;
    padding: 5px;
    font-size: 12px;
    flex: 1 0 auto;
}

.time-edit {
    /* margin-top: 5px; */
    margin-right: 5px;
    font-size: 12px;
    font-family: victor-mono;
    padding: 5px;
    flex: 0 0 auto;
}

